Lesson 8: change name for ProductResources and ProductSchemas
