# merch_shop/api-docs.json
@@ -458,7 +458,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#\/components\/schemas\/Page"
+                                                "$ref": "#\/components\/schemas\/Product"
                                             }
                                         },
                                         "list": {
@@ -471,27 +471,26 @@
                                 }
                             }
                         }
+                    },
+                    "422": {
+                        "description": "Empty categories",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "$ref": "#\/components\/schemas\/EmptyCategories"
+                                }
+                            }
+                        }
                     }
                 }
             }
         },
-        "\/api\/catalog\/products\/details\/{slug}": {
+        "\/api\/catalog\/products\/details": {
             "get": {
                 "tags": [
                     "product"
                 ],
                 "summary": "Display the specified resource",
-                "parameters": [
-                    {
-                        "name": "slug",
-                        "in": "path",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Successful response",
@@ -501,7 +500,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#\/components\/schemas\/Page"
+                                            "$ref": "#\/components\/schemas\/Product"
                                         }
                                     }
                                 }
@@ -529,6 +528,14 @@
                     "parent_id": {
                         "type": "integer",
                         "nullable": true
+                    }
+                }
+            },
+            "EmptyCategories": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string"
                     }
                 }
             },
@@ -589,6 +596,38 @@
                     }
                 }
             },
+            "Product": {
+                "type": "object",
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    },
+                    "price": {
+                        "format": "double",
+                        "type": "string"
+                    },
+                    "description": {
+                        "type": "string"
+                    },
+                    "category": {
+                        "$ref": "#\/components\/schemas\/ProductCategory"
+                    },
+                    "attributes": {
+                        "type": "array",
+                        "items": {
+                            "type": "object",
+                            "properties": {
+                                "name": {
+                                    "type": "string"
+                                },
+                                "value": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "News": {
                 "type": "object",
                 "properties": {
@@ -610,14 +649,13 @@
             "Page": {
                 "type": "object",
                 "properties": {
-                    "name": {
+                    "title": {
                         "type": "string"
                     },
-                    "description": {
+                    "slug": {
                         "type": "string"
                     },
-                    "price": {
-                        "format": "double",
+                    "text": {
                         "type": "string"
                     }
                 }
