# merch_shop/app/OpenApi/Schemas/ListProductSchema.php
@@ -8,9 +8,10 @@ use GoldSpecDigital\ObjectOrientedOAS\Objects\AnyOf;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\Not;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\OneOf;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\Schema;
+use Vyuldashev\LaravelOpenApi\Contracts\Reusable;
 use Vyuldashev\LaravelOpenApi\Factories\SchemaFactory;
 
-class CompleteProductSchema extends SchemaFactory
+class ListProductSchema extends SchemaFactory implements Reusable
 {
     /**
      * @return AllOf|OneOf|AnyOf|Not|Schema
@@ -20,15 +21,8 @@ class CompleteProductSchema extends SchemaFactory
         return Schema::object('Product')
             ->properties(
                 Schema::string('name'),
+                Schema::string('slug'),
                 Schema::string('price')->format(Schema::FORMAT_DOUBLE),
-                Schema::string('description'),
-                ProductCategorySchema::ref('category'),
-                Schema::array('attributes')->items(
-                    Schema::object()->properties(
-                        Schema::string('name'),
-                        Schema::string('value')
-                    )
-                )
             );
     }
 }
